apps/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-vpn-ingress
  namespace: jenkins
  annotations:
    cert-manager.io/cluster-issuer: zerossl-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure 
spec:
  ingressClassName: traefik
  rules:
    - host: jenkins.sakul-flee.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-operator-http-jenkins
                port:
                  number: 8080
  tls:
    - hosts:
        - jenkins.sakul-flee.de 
      secretName: jenkins-sakul-flee-de-tls
